<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="server.fragment.AddProductFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/add_product"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_recycler_back"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/product_name"
            android:textColor="?attr/textFillColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_btn_bck"
            android:gravity="center"
            android:hint="@string/name"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/product_code"
            android:textColor="?attr/textFillColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_productCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_btn_bck"
            android:gravity="center"
            android:hint="@string/code"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/category"
            android:textColor="?attr/textFillColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/product_composition"
            android:textColor="?attr/textFillColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_productComposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_btn_bck"
            android:gravity="center"
            android:hint="@string/composition"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/product_foto"
            android:textColor="?attr/textFillColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_productFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_btn_bck"
            android:gravity="center"
            android:hint="@string/fotoUrl"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_btn_bck"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>