<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="server.fragment.ChangeProductFragment">

    <TextView
        android:id="@+id/tv_productName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeMaxTextSize="100sp"
        android:gravity="center"
        android:padding="12dp"
        android:text="Чай чёрный Не фасованый ТМ Greenfield - Эрл Грей Фэнтази 100грам Карт. уп. 1шт/уп"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_recycler_back"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/milk"
                android:contentDescription="">

            </ImageView>

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/prodress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:progress="50"
                android:progressDrawable="@drawable/progress_health_bar" />

            <TextView
                android:id="@+id/infoHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/cyan"
                android:text="Продукт натурален на 60%"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/m_free_palm_oil"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/free_palm_oil">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:textColor="@color/darkGray"
                        android:text="@string/free_palm_oil"/>                </LinearLayout>

                <LinearLayout
                    android:id="@+id/m_free_sugar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/free_sugar">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:textColor="@color/darkGray"
                        android:text="@string/free_sugar"/>                </LinearLayout>

                <LinearLayout
                    android:id="@+id/m_free_e"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/free_e">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:textColor="@color/darkGray"
                        android:text="@string/free_e"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/m_full_nature"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/full_nature">
                    </ImageView>
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="@color/darkGray"
                        android:text="@string/full_nature"/>
                </LinearLayout>



            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/product_composition"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_productComposition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:hint="@string/composition"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/product_code"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_productCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"

                android:gravity="center"
                android:hint="@string/code"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"

                android:gravity="center"
                android:hint="@string/category"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_btn_bck"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>