<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="6dp"
    android:id="@+id/ll_item">


    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:singleLine="true"
        android:text="@string/product_name"
        android:background="@drawable/ic_normal_top"
        android:gravity="center"
        android:padding="6dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="3.5dp"
        android:layout_marginRight="3.5dp"
        android:layout_marginTop="-2dp"
        android:layout_gravity="center"
        android:background="@color/yellow"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/milk"
        android:contentDescription="">

    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_category_name"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/category"
            android:textColor="@color/darkGray"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:padding="6dp" />
        <TextView
            android:id="@+id/tv_composition"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLines="5"
            android:ellipsize="end"
            android:singleLine="false"
            android:text="@string/product_composition"
            android:layout_marginBottom="50dp"
            android:textColor="@color/darkGray"
            android:layout_height="wrap_content"
            android:padding="6dp" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>